Fixed heading alignment

--- a/src/sass/mixins/_ui.scss
+++ b/src/sass/mixins/_ui.scss
@@ -10,6 +10,7 @@
   line-height: 1;
   font-family: $ffHeading;
   font-weight: $fwExtraBold;
+  text-align: left;
 
   @media #{$mqTablet} {
     margin: 0.5em 0;
